--- a/SEMO/Base.lproj/Main.storyboard
+++ b/SEMO/Base.lproj/Main.storyboard
@@ -194,6 +194,9 @@
                                 <state key="normal" title="Actualizar">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="ActualizarAlumnoButton:" destination="c4z-p3-nVA" eventType="touchUpInside" id="bCL-eb-onb"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aIv-ld-idJ">
                                 <rect key="frame" x="261" y="233" width="43" height="30"/>
@@ -201,6 +204,9 @@
                                 <state key="normal" title="Borrar">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="borrarAlumnoButton:" destination="c4z-p3-nVA" eventType="touchUpInside" id="NyT-Tf-Oxq"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Li-l7-S3L">
                                 <rect key="frame" x="176" y="233" width="67" height="30"/>
@@ -208,6 +214,9 @@
                                 <state key="normal" title="Consultar">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="consultarAlumnoButton:" destination="c4z-p3-nVA" eventType="touchUpInside" id="QMT-xO-qLa"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wSd-gc-Xf3">
                                 <rect key="frame" x="20" y="233" width="52" height="30"/>
@@ -215,6 +224,9 @@
                                 <state key="normal" title="Insertar">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="insertarAlumnoButton:" destination="c4z-p3-nVA" eventType="touchUpInside" id="eZE-XJ-slJ"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wvt-rN-eDV">
                                 <rect key="frame" x="0.0" y="277" width="320" height="291"/>
@@ -226,6 +238,7 @@
                     </view>
                     <connections>
                         <outlet property="AlumnosTableView" destination="wvt-rN-eDV" id="882-hh-5LN"/>
+                        <outlet property="ConsultarAlumnoButton" destination="2Li-l7-S3L" id="jmm-Mc-UVe"/>
                         <outlet property="apellidoAlumnoField" destination="q9R-fd-pNt" id="jQe-aj-p2r"/>
                         <outlet property="carnetField" destination="JHY-Y1-GMT" id="Pyh-fB-P4p"/>
                         <outlet property="nombreAlumnoField" destination="k0H-AQ-CE9" id="EIm-cO-LBs"/>
