--- a/SEMO/Base.lproj/Main.storyboard
+++ b/SEMO/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="c4z-p3-nVA" kind="modal" id="MhT-BS-ExC"/>
+                                    <segue destination="c4z-p3-nVA" kind="modal" id="yv4-Io-KiG"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xu3-qQ-fc7">
